--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 }
 body{
     background-color: hsl(212, 45%, 89%);
-    font-family: 'Open Sans', sans-serif;
+font-family: 'Outfit', sans-serif;
 }
 .card{
     width: 300px;
