--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+//
 body{
     background-color: hsl(212, 45%, 89%);
 font-family: 'Outfit', sans-serif;
